--- a/public/resources/html/index.html
+++ b/public/resources/html/index.html
@@ -1,9 +1,337 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Test Page</title>
+  <title>The Four Stooges</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link href="http://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+  <link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <style>
+  body {
+      font: 400 15px Lato, sans-serif;
+      line-height: 1.8;
+      color: #818181;
+  }
+  h2 {
+      font-size: 24px;
+      text-transform: uppercase;
+      color: #303030;
+      font-weight: 600;
+      margin-bottom: 30px;
+  }
+  h4 {
+      font-size: 19px;
+      line-height: 1.375em;
+      color: #303030;
+      font-weight: 400;
+      margin-bottom: 30px;
+  }  
+  .jumbotron {
+      background-color: #f4511e;
+      color: #fff;
+      padding: 100px 25px;
+      font-family: Montserrat, sans-serif;
+  }
+  .container-fluid {
+      padding: 60px 50px;
+  }
+  .bg-grey {
+      background-color: #f6f6f6;
+  }
+  .logo-small {
+      color: #f4511e;
+      font-size: 50px;
+  }
+  .logo {
+      color: #f4511e;
+      font-size: 200px;
+  }
+  .thumbnail {
+      padding: 0 0 15px 0;
+      border: none;
+      border-radius: 0;
+  }
+  .thumbnail img {
+      width: 100%;
+      height: 100%;
+      margin-bottom: 10px;
+  }
+  .carousel-control.right, .carousel-control.left {
+      background-image: none;
+      color: #f4511e;
+  }
+  .carousel-indicators li {
+      border-color: #f4511e;
+  }
+  .carousel-indicators li.active {
+      background-color: #f4511e;
+  }
+  .item h4 {
+      font-size: 19px;
+      line-height: 1.375em;
+      font-weight: 400;
+      font-style: italic;
+      margin: 70px 0;
+  }
+  .item span {
+      font-style: normal;
+  }
+  .panel {
+      border: 1px solid #f4511e; 
+      border-radius:0 !important;
+      transition: box-shadow 0.5s;
+  }
+  .panel:hover {
+      box-shadow: 5px 0px 40px rgba(0,0,0, .2);
+  }
+  .panel-footer .btn:hover {
+      border: 1px solid #f4511e;
+      background-color: #fff !important;
+      color: #f4511e;
+  }
+  .panel-heading {
+      color: #fff !important;
+      background-color: #f4511e !important;
+      padding: 25px;
+      border-bottom: 1px solid transparent;
+      border-top-left-radius: 0px;
+      border-top-right-radius: 0px;
+      border-bottom-left-radius: 0px;
+      border-bottom-right-radius: 0px;
+  }
+  .panel-footer {
+      background-color: white !important;
+  }
+  .panel-footer h3 {
+      font-size: 32px;
+  }
+  .panel-footer h4 {
+      color: #aaa;
+      font-size: 14px;
+  }
+  .panel-footer .btn {
+      margin: 15px 0;
+      background-color: #f4511e;
+      color: #fff;
+  }
+  .navbar {
+      margin-bottom: 0;
+      background-color: #f4511e;
+      z-index: 9999;
+      border: 0;
+      font-size: 12px !important;
+      line-height: 1.42857143 !important;
+      letter-spacing: 4px;
+      border-radius: 0;
+      font-family: Montserrat, sans-serif;
+  }
+  .navbar li a, .navbar .navbar-brand {
+      color: #fff !important;
+  }
+  .navbar-nav li a:hover, .navbar-nav li.active a {
+      color: #f4511e !important;
+      background-color: #fff !important;
+  }
+  .navbar-default .navbar-toggle {
+      border-color: transparent;
+      color: #fff !important;
+  }
+  footer .glyphicon {
+      font-size: 20px;
+      margin-bottom: 20px;
+      color: #f4511e;
+  }
+
+  </style>
 </head>
-<body>
-<h1>Server is working!!</h1>
+<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
+
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <a class="navbar-brand" href="#myPage">Ceperunt in ea Manus<span class="glyphicon glyphicon-heart"></span></a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#about">ABOUT</a></li>
+        <li><a href="/registerUser" target="_self">SIGN UP</a></li>
+        <li><a href="#" data-toggle="modal" data-target="#myModal">LOGIN</a></li>
+        <li><a href="#" data-toggle="modal" data-target="#myModal2">NGO LOGIN</a></li>
+      </ul>
+     <div id="myModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+	
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="THE FOUR STOOGES">
+        <button type="button" class="close" data-dismiss="modal">x</button>
+        <h4 class="modal-title">Login</h4>
+      </div>
+ <form action="/userLogin" method="post">
+<div class="form-group"><input type="email" class="form-control" placeholder="Email" name="email"></input></div>
+<div class="form-group"><input type="password" class="form-control" placeholder="Password" name="pwd"></input></div>
+  <p>Don't have an account?<a href="/" target="_blank">Register</a></p><br>
+  <div class="modal-footer">
+  <input class="btn btn-primary" type="submit" name="submit" value="Submit">
+  </div>
+</form> 
+      </div>
+    </div>
+
+  </div>
+</div>
+    </div>
+  </div>
+</nav>
+     <div id="myModal2" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+	
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="THE FOUR STOOGES">
+        <button type="button" class="close" data-dismiss="modal">x</button>
+        <h4 class="modal-title">NGO Login</h4>
+      </div>
+ <form action="/userNGO" method="post">
+<div class="form-group"><input type="email" class="form-control" placeholder="Email" name="email"></input></div>
+<div class="form-group"><input type="password" class="form-control" placeholder="Password" name="pwd"></input></div>
+  <p>Don't have an account?<a href="file:///C:/Softwares/sign up.html" target="_blank">Register</a></p><br>
+  <div class="modal-footer">
+  <input class="btn btn-primary" type="submit" name="submit" value="Login">
+  </div>
+</form> 
+      </div>
+    </div>
+
+  </div>
+</div>
+    </div>
+  </div>
+</nav>
+
+<div class="jumbotron text-center">
+  <h1>THE FOUR STOOGES</h1> 
+  <p>EVERYONE HAS A SECOND CHANCE</p> 
+
+</div>
+
+<!-- Container (About Section) -->
+<div id="about" class="container-fluid">
+  <div class="row">
+    <div class="col-sm-8">
+      <h2>Ceperunt in ea Manus</h2><br>
+      <p> Ceperaunt in ea Manus in latin means <b>Helping hand</b></p>
+      <p> We here at The four stooges are an organization that will help</p>
+      <p>erradicate the country growing and terrifffying problem..That is none</p>
+      <p>other than poverty..Like Mother teresa stated"Yesterday is gone</p>
+      <p>tomorrow has not yet come..So let us begin today</p>
+      <p>Here at the Four stooges we help to reduce the amount of poverty</p>
+      <p> growing in our country with the help of <strong>NGO</strong></p>
+      <br><button class="btn btn-default btn-lg" title="Get in touch with our NGO">Get in Touch</button>
+    </div>
+    <div class="col-sm-4">
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+    <li data-target="#myCarousel" data-slide-to="3"></li>
+    <li data-target="#myCarousel" data-slide-to="4"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="/resources/html/image1.jpg" alt="Chania">
+    </div>
+
+    <div class="item">
+      <img src="/resources/html/image2.jpg" alt="Chania">
+    </div>
+
+    <div class="item">
+      <img src="/resources/html/image3.jpg" alt="Flower">
+    </div>
+
+    <div class="item">
+      <img src="/resources/html/image4.jpg" alt="Flower">
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+    </div>
+  </div>
+</div>
+
+
+
+
+<!-- Container (Contact Section) -->
+<div class="container-fluid bg-grey">
+  <div class="row">
+    <div class="col-sm-5">
+      <p>Contact us and we'll get back to you within 24 hours.</p>
+      <p><span class="glyphicon glyphicon-map-marker"></span> Bangalore ,India</p>
+      <p><span class="glyphicon glyphicon-phone"></span> +91 8197960419</p>
+      <p><span class="glyphicon glyphicon-envelope"></span> myemail@something.com</p>
+    </div>
+    <div class="col-sm-7 slideanim">
+      <div class="row">
+         <form action="" method="post">
+           <fieldset>
+            <legend>Contact:</legend>
+        <div class="col-sm-6 form-group">
+          <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+        </div>
+        <div class="col-sm-6 form-group">
+          <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+        </div>
+      </div>
+      <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea><br>
+      <div class="row">
+        <div class="col-sm-12 form-group">
+          <button class="btn btn-primary" type="submit">Send</button>
+        </div>
+         </fieldset>
+       </form>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+<nav class="navbar navbar-default navbar-fixed-bottom">
+  <div class="container">
+    <div class="navbar-footer">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <a class="navbar-brand" href="#myPage">Ceperunt in ea Manus<span class="glyphicon glyphicon-heart"></span></a>     
+    </div>
+
+</div>
+</div>
+</nav> 
+
 </body>
 </html>
