--- a/public/resources/html/index.html
+++ b/public/resources/html/index.html
@@ -163,10 +163,10 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#about">ABOUT</a></li>
         <li><a href="/registerUser" target="_self">SIGN UP</a></li>
-        <li><a href="#" data-toggle="modal" data-target="#myModal">LOGIN</a></li>
+        <li><a href="#" data-toggle="modal" data-target="#myModal1">LOGIN</a></li>
         <li><a href="#" data-toggle="modal" data-target="#myModal2">NGO LOGIN</a></li>
       </ul>
-     <div id="myModal" class="modal fade" role="dialog">
+     <div id="myModal1" class="modal fade" role="dialog">
     <div class="modal-dialog">
 	
     <!-- Modal content-->
@@ -178,9 +178,9 @@
  <form action="/userLogin" method="post">
 <div class="form-group"><input type="email" class="form-control" placeholder="Email" name="email"></input></div>
 <div class="form-group"><input type="password" class="form-control" placeholder="Password" name="pwd"></input></div>
-  <p>Don't have an account?<a href="/" target="_blank">Register</a></p><br>
+  <p>Don't have an account?<a href="/registerUser" target="_blank">Register</a></p><br>
   <div class="modal-footer">
-  <input class="btn btn-primary" type="submit" name="submit" value="Submit">
+  <input class="btn btn-primary" type="submit" name="submit" value="Login">
   </div>
 </form> 
       </div>
@@ -203,7 +203,7 @@
  <form action="/userNGO" method="post">
 <div class="form-group"><input type="email" class="form-control" placeholder="Email" name="email"></input></div>
 <div class="form-group"><input type="password" class="form-control" placeholder="Password" name="pwd"></input></div>
-  <p>Don't have an account?<a href="file:///C:/Softwares/sign up.html" target="_blank">Register</a></p><br>
+  <p>Don't have an account?<a href="/registerNGO" target="_blank">Register</a></p><br>
   <div class="modal-footer">
   <input class="btn btn-primary" type="submit" name="submit" value="Login">
   </div>
