--- a/public/resources/html/registerUser.html
+++ b/public/resources/html/registerUser.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Sign Up</title>
+  <title>The Four Stooges</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -48,7 +48,75 @@
   .logo {
       color: #f4511e;
       font-size: 200px;
-}
+  }
+  .thumbnail {
+      padding: 0 0 15px 0;
+      border: none;
+      border-radius: 0;
+  }
+  .thumbnail img {
+      width: 100%;
+      height: 100%;
+      margin-bottom: 10px;
+  }
+  .carousel-control.right, .carousel-control.left {
+      background-image: none;
+      color: #f4511e;
+  }
+  .carousel-indicators li {
+      border-color: #f4511e;
+  }
+  .carousel-indicators li.active {
+      background-color: #f4511e;
+  }
+  .item h4 {
+      font-size: 19px;
+      line-height: 1.375em;
+      font-weight: 400;
+      font-style: italic;
+      margin: 70px 0;
+  }
+  .item span {
+      font-style: normal;
+  }
+  .panel {
+      border: 1px solid #f4511e; 
+      border-radius:0 !important;
+      transition: box-shadow 0.5s;
+  }
+  .panel:hover {
+      box-shadow: 5px 0px 40px rgba(0,0,0, .2);
+  }
+  .panel-footer .btn:hover {
+      border: 1px solid #f4511e;
+      background-color: #fff !important;
+      color: #f4511e;
+  }
+  .panel-heading {
+      color: #fff !important;
+      background-color: #f4511e !important;
+      padding: 25px;
+      border-bottom: 1px solid transparent;
+      border-top-left-radius: 0px;
+      border-top-right-radius: 0px;
+      border-bottom-left-radius: 0px;
+      border-bottom-right-radius: 0px;
+  }
+  .panel-footer {
+      background-color: white !important;
+  }
+  .panel-footer h3 {
+      font-size: 32px;
+  }
+  .panel-footer h4 {
+      color: #aaa;
+      font-size: 14px;
+  }
+  .panel-footer .btn {
+      margin: 15px 0;
+      background-color: #f4511e;
+      color: #fff;
+  }
   .navbar {
       margin-bottom: 0;
       background-color: #f4511e;
@@ -76,7 +144,7 @@
       margin-bottom: 20px;
       color: #f4511e;
   }
-  }
+
   </style>
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
@@ -93,51 +161,135 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="file:///C:/Softwares/Website.html">HOME</a></li>
+        <li><a href="#about">ABOUT</a></li>
+        <li><a href="#" data-toggle="modal" data-target="#myModal1">LOGIN</a></li>
+        <li><a href="#" data-toggle="modal" data-target="#myModal2">NGO LOGIN</a></li>
       </ul>
-</div>
-</div>
-</div>
-</nav>   
-<div class="container-fluid">
- <div class="row">
-   <div class= "col-sm-8">
-<form action="/registerUser" method="post">
-    <b>First Name:</b><br>
-    <input type="text" name="firstname" placeholder="First Name"><br><br>
-    <b>Last Name:</b><br>
-    <input type="text" name="lastname" placeholder="Last Name"><br><br>
-    <b>Username:</b><br> 
-    <input type="text" name="username" placeholder="Username"><br><br>
-    <b>Password:</b><br>
-    <input type="text" name="password" placeholder="Password"><br><br>
-    <b>Re-Type Password:</b><br>
-    <input type="text" name="re-typepasssword" placeholder="Re-Type Password"><br><br>
-    <b>Email:</b><br>
-    <input type="email" name="email" placeholder="E-Mail"><br><br>
-    <b>Gender:</b><br>
-    <select name="Gender" placeholder="Gender">
-      <option value="male">Male</option>
-      <option value="female">Female</option>      
-     </select><br><br>
-    
-    <b>Country:</b><br>
-    <select name="Country" placeholder="Country">
-      <option value="America">America</option>
-      <option value="India">India</option>
-      <option value="West-Indies">West-Indies</option>
-      <option value="South Africa">South Africa</option>
-      <option value="Egypt">Egypt</option>
-      <option value="Sri-Lanka">Sri-Lanka</option>      
-     </select><br><br>
-     <b>Phone No:</b><br>
-    <input type="text" name="Phone no" placeholder="Phone No:" ><br><br>  
-    <input class="btn btn-info" type="submit" name="submit" value="Submit">
-
-
+     <div id="myModal1" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+  
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="THE FOUR STOOGES">
+        <button type="button" class="close" data-dismiss="modal">x</button>
+        <h4 class="modal-title">Login</h4>
+      </div>
+ <form action="/userLogin" method="post">
+<div class="form-group"><input type="email" class="form-control" placeholder="Email" name="email"></input></div>
+<div class="form-group"><input type="password" class="form-control" placeholder="Password" name="pwd"></input></div>
+  <p>Don't have an account?<a href="/registerUser" target="_blank">Register</a></p><br>
+  <div class="modal-footer">
+  <input class="btn btn-primary" type="submit" name="submit" value="Login">
+  </div>
 </form> 
+      </div>
+    </div>
+
+  </div>
 </div>
+    </div>
+  </div>
+</nav>
+     <div id="myModal2" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+  
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="THE FOUR STOOGES">
+        <button type="button" class="close" data-dismiss="modal">x</button>
+        <h4 class="modal-title">NGO Login</h4>
+      </div>
+ <form action="/userNGO" method="post">
+<div class="form-group"><input type="email" class="form-control" placeholder="Email" name="email"></input></div>
+<div class="form-group"><input type="password" class="form-control" placeholder="Password" name="pwd"></input></div>
+  <p>Don't have an account?<a href="/registerNGO" target="_blank">Register</a></p><br>
+  <div class="modal-footer">
+  <input class="btn btn-primary" type="submit" name="submit" value="Login">
+  </div>
+</form> 
+      </div>
+    </div>
+
+  </div>
 </div>
+    </div>
+  </div>
+</nav>
+
+<div class="jumbotron text-center">
+  <h1>THE FOUR STOOGES</h1> 
+  <p>EVERYONE HAS A SECOND CHANCE</p> 
+
+</div>
+
+<!-- Container (About Section) -->
+
+<div class="container" style="margin-top: 40px;margin-bottom: 150px;">
+    <div class="row">
+      <div class="col-lg-4">
+        <h2>SIGN UP</h2>
+        <form action="/registerUser" method="post">
+          <div class="form-group">
+            <input name="name" class="form-control" placeholder="Name"></input>
+          </div>
+          <div class="form-group">
+            <input class="form-control" placeholder="Email" name="email" type="email"></input>
+          </div>
+          <div class="form-group">
+            <input class="form-control" name="pwd" type="password" placeholder="Password"></input>
+          </div>
+          <div class="form-group">
+            <input class="form-control" placeholder="Contact" name="contact"></input>
+          </div>
+          <button type="Submit" style="float: right;" class="btn btn-primary">Submit</button>
+        </form>
+      </div>
+      <div class="col-lg-2"></div>
+      <div class="col-lg-6">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+          <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
+            <li data-target="#myCarousel" data-slide-to="4"></li>
+          </ol>
+
+        <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+              <div class="item active">
+                <img src="/resources/html/image1.jpg" alt="Chania">
+              </div>
+
+              <div class="item">
+                <img src="/resources/html/image2.jpg" alt="Chania">
+              </div>
+
+              <div class="item">
+                <img src="/resources/html/image3.jpg" alt="Flower">
+              </div>
+
+              <div class="item">
+                <img src="/resources/html/image4.jpg" alt="Flower">
+              </div>
+            </div>
+
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+              <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+              <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container">
@@ -153,9 +305,6 @@
 </div>
 </div>
 </nav> 
-
-
-
 
 </body>
 </html>
