--- a/public/resources/html/userhome.html
+++ b/public/resources/html/userhome.html
@@ -9,6 +9,46 @@
   <link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script
+src="http://maps.googleapis.com/maps/api/js">
+</script>
+
+<script>
+var map;
+var myCenter=new google.maps.LatLng(12.969765512005955,77.59523391723633);
+
+function initialize()
+{
+var mapProp = {
+  center:myCenter,
+  zoom:5,
+  mapTypeId:google.maps.MapTypeId.ROADMAP
+  };
+
+  map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+
+  google.maps.event.addListener(map, 'click', function(event) {
+    placeMarker(event.latLng);
+  });
+}
+
+function placeMarker(location) {
+  var marker = new google.maps.Marker({
+    position: location,
+    map: map,
+  });
+  var infowindow = new google.maps.InfoWindow({
+    content: 'Latitude: ' + location.lat() + '<br>Longitude: ' + location.lng()
+  });
+  var lat = location.lat();
+  var long = location.lng();
+  $("#field1").val(lat);
+  $("#field2").val(long);
+  infowindow.open(map,marker);
+}
+
+google.maps.event.addDomListener(window, 'load', initialize);
+</script>
   <style>
   body {
       font: 400 15px Lato, sans-serif;
@@ -93,11 +133,10 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="file:///C:/Softwares/Website.html">LOGOUT</a></li>
-        <li><a href="#">SETTINGS</a></li>
-        <li><a href="#">FORUMS</a></li>
-       <li><a href="file:///C:/Softwares/Blog.html">BLOG</a></li>
-       <li><a href="file:///C:/Softwares/maps.html">MAPS</a></li>
+        <li><a href="/">LOGOUT</a></li>
+        <li><a href="/settings">SETTINGS</a></li>
+        <li><a href="/forums">FORUMS</a></li>
+       <li><a href="/blog">BLOG</a></li>
       </ul>
 </div>
 </div>
@@ -106,7 +145,7 @@
 
 <div class="container text-center">    
   <div class="row">
-    <div class="col-sm-3 well">
+    <div class="col-md-3 well">
       <div class="well">
         <p><a href="#">My Profile</a></p>
         <img src="/resources/html/image6.jpg" class="img-circle" height="65" width="65" alt="Avatar">
@@ -131,61 +170,26 @@
       <p><a href="#">Link</a></p>
       <p><a href="#">Link</a></p>
     </div>
-    <div class="col-sm-7">
-   
-      
-      <div class="row">
-        <div class="col-sm-3">
-          <div class="well">
-           <p>John</p>
-           <img src="/resources/html/image6.jpg" class="img-circle" height="55" width="55" alt="Avatar">
+    <div class="col-md-3"></div>
+    <div class="row">
+      <div class="col-md-7 well">
+        <h2>Upload details of person in need</h2>
+        <form action="/upload" method="post" enctype="multipart/form-data" style="margin-left: 80px;">
+          <div class="form-group">
+            <input type="file" name="image">
           </div>
-        </div>
-        <div class="col-sm-9">
-          <div class="well">
-           <p>add data</p>
+          <div class="form-group">
+            <div id="googleMap" style="width:500px;height:380px;"></div>
           </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-3">
-          <div class="well">
-           <p>user</p>
-           <img src="/resources/html/image5.jpg" class="img-circle" height="55" width="55" alt="Avatar">
+          <div class="form-group">
+            Latitude : <input id="field1" type="text" name="lat">
           </div>
-        </div>
-        <div class="col-sm-9">
-          <div class="well">
-            <p>add data</p>
+          <div class="form-group">
+            Longitude : <input id="field2" type="text" name="long">
           </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-3">
-          <div class="well">
-           <p>user</p>
-           <img src="/resources/html/image5.jpg" class="img-circle" height="55" width="55" alt="Avatar">
-          </div>
-        </div>
-        <div class="col-sm-9">
-          <div class="well">
-            <p>add data</p>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-3">
-          <div class="well">
-           <p>user</p>
-           <img src="/resources/html/image6.jpg" class="img-circle" height="55" width="55" alt="Avatar">
-          </div>
-        </div>
-        <div class="col-sm-9">
-          <div class="well">
-            <p>add data</p>
-          </div>
-        </div>
-      </div>     
+          <button type="Submit" style="float: center;" class="btn btn-primary">Submit</button>
+        </form>
+      </div> 
     </div>
    
     </div>
